syntax = "proto3";
import "users.proto";

option go_package = "./service";

service Repo {
  rpc GetRepos (RepoGetRequest) returns (stream RepoGetReply) {} // stream模式返回RepoGetReply消息流
}

message RepoGetRequest {
  string id = 2;
  string creator_id = 1;
}

message Repository {
  string id = 1;
  string name = 2;
  string url = 3;
  User owner = 4;
}

message RepoGetReply {
  Repository repo = 1;
}

